[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stateroom = { path = "../../stateroom/stateroom"}
stateroom-server = { path = "../../stateroom/stateroom-server"}
aper = "0.2.2"
actix = "0.13.0"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "any", "sqlite"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
